--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>
   <h1>Appendix for [Your Paper Title]</h1>
 
+ <h2>Supplementary Image</h2>
+  <p><img src="images/Table 1 - News Generation.pdf" alt="Table 1" width="900"></p>
+  
   <h2>Embedded Tableau Visualization</h2>
   <iframe src="https://public.tableau.com/views/YourVizName/Sheet1?:embed=true" width="1000" height="600" frameborder="0"></iframe>
 
-  <h2>Supplementary Image</h2>
-  <p><img src="images/figure1.png" alt="Figure 1" width="800"></p>
+
 
   <p>More content coming soon.</p>
 </body>
