--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Appendix for [Your Paper Title]</h1>
 
  <h2>Supplementary Image</h2>
-  <p><img src="/images/Table 1 - News Generation.pdf" alt="Table 1" width="900"></p>
+  <p><img src="https://jrlaufer.github.io/mediaframes_testing/images/Table 1 - News Generation.png" alt="Table 1" width="900"></p>
   
   <h2>Embedded Tableau Visualization</h2>
   <iframe src="https://public.tableau.com/views/YourVizName/Sheet1?:embed=true" width="200" height="100" frameborder="0"></iframe>
